[package]
name = "leaguetracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
reqwest = {version = "0.11.22",features = ["blocking","json"]}
scraper = "0.17.1"
eframe = "0.23.0"
env_logger = "0.10.0"
image = "0.24.7"
epi = "0.17.0"

[build-dependencies]
winres = "0.1.12"
